--- a/README
+++ b/README
@@ -46,6 +46,11 @@ delayinfor.csv 中每行记录的是pc到pc之间的时延(ps:pcA到pcB的时延 和 pcB到pcAp的时
 
 
 
+##############################################
+infor.csv 是将我的用例转换成豪哥的格式
+##############################################
+
+
 
 
 
